--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorPrimary">#0F9D58</color>
     <color name="colorPrimaryDark">#16E37F</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="turquoise">#1abc9c</color>
+    <color name="light_gray">#f0f0f0</color>
 </resources>
