--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="turquoise">#1abc9c</color>
     <color name="light_gray">#f0f0f0</color>
+    <color name="red">#DC143C</color>
 </resources>
